Ajustes criando uma imagem para instalar via composer

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,15 @@
 ###############################################################################
 version: '3.1'
 services:
- 
+
+  composer_installation:
+    container_name: composer_installation_domino
+    image: composer
+    working_dir: /var/www/myapp
+    volumes:
+      - ../cakephp:/var/www/myapp
+    command: sh -c "composer self-update --1 && composer install --ignore-platform-reqs"
+
   myapp-mysql:
     image: 'mysql:8.0'
     container_name: myapp-mysql
@@ -37,7 +45,8 @@ services:
     build: ./php-fpm
     container_name: myapp-php-fpm
     working_dir: /var/www/myapp
-    command: sh -c "composer install --ignore-platform-reqs"
+    #tty: true
+    #command: sh -c "composer install --ignore-platform-reqs"
     volumes:
       - ../cakephp:/var/www/myapp
       - ./php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
