--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,26 @@
 # CakePHP 3
 
-/vendor/*
-/config/app.php
+cakephp/vendor/*
+cakephp/config/app.php
 
-/tmp/cache/models/*
-!/tmp/cache/models/empty
-/tmp/cache/persistent/*
-!/tmp/cache/persistent/empty
-/tmp/cache/views/*
-!/tmp/cache/views/empty
-/tmp/sessions/*
-!/tmp/sessions/empty
-/tmp/tests/*
-!/tmp/tests/empty
+cakephp/tmp/cache/models/*
+cakephp!/tmp/cache/models/empty
+cakephp/tmp/cache/persistent/*
+cakephp!/tmp/cache/persistent/empty
+cakephp/tmp/cache/views/*
+cakephp!/tmp/cache/views/empty
+cakephp/tmp/sessions/*
+cakephp!/tmp/sessions/empty
+cakephp/tmp/tests/*
+cakephp!/tmp/tests/empty
 
-/logs/*
+cakephp/logs/*
 !/logs/empty
 
 # CakePHP 2
 
-/app/tmp/*
-/app/Config/core.php
-/app/Config/database.php
-/vendors/*
-*/vendor/*
+cakephp/app/tmp/*
+cakephp/app/Config/core.php
+cakephp/app/Config/database.php
+cakephp/vendors/*
 /mysql*
