--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,14 +1,15 @@
-FROM phpdockerio/php74-fpm:latest
+########### FOR BUILD ##########
+FROM composer
 
-# Install selected extensions and other stuff
-RUN apt-get update \
-    && apt-get -y --no-install-recommends install  php7.4-mysql php7.4-intl php7.4-mbstring php7.4-sqlite3\
-    && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+WORKDIR /app
 
-WORKDIR "/var/www/myapp"
+RUN composer self-update --1 && composer install --ignore-platform-reqs
+
+
+########### RUN PROJECT ##########
+
+FROM webdevops/php-apache:7.4
+
+WORKDIR /app
 
 RUN chmod -R 777 .
-
-#RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-#RUN composer self-update --1
-#RUN composer install
